# sapbtp-flask-bookstore-template

./: .env.example  .gitignore  Makefile  README.md  mta.yaml  package-lock.json  package.json  setup-env.bat  setup-env.sh  xs-security.json
app/flaskbookstore/: package-lock.json  package.json  ui5.yaml
app/flaskbookstore/webapp/: Component.js  index.html  manifest.json  xs-app.json
app/flaskbookstore/webapp/controller/: App.controller.js  MainView.controller.js
app/flaskbookstore/webapp/i18n/: i18n.properties
app/flaskbookstore/webapp/view/: App.view.xml  MainView.view.xml
app/router/: package-lock.json  package.json  xs-app.json
app/router/static/: flpsandbox.html
db/: schema.cds
db/data/: sap.common-Currencies.csv
srv/: app.py  config.py  pyproject.toml  requirements.txt
srv/app/: __init__.py  database.py  models.py
srv/app/routes/: __init__.py
srv/app/services/: books_service.py
srv/app/utils/: auth_utils.py  heathcheck_utils.py
srv/tests/: test_app.py  test_auth_utils.py  test_healthcheck_utils.py  test_models.py
